--- a/input.conf
+++ b/input.conf
@@ -188,3 +188,4 @@ A cycle-values video-aspect "16:9" "4:3" "2.35:1" "-1"
 # ? stop                                # stop playback (quit or enter idle mode)
 
 ctrl+b script-binding Blackbox
+r cycle-values play-dir - +
